# opentrons

./: .gitignore  Dockerfile  package.json
.github/workflows/: app-installed-test-macOS.yaml
api/: Pipfile
api-client/: package.json
api/src/opentrons/: __init__.py  uart_control.py
api/src/opentrons/config/: advanced_settings.py  feature_flags.py
api/src/opentrons/protocol_api/: protocol_context.py
api/src/opentrons/protocol_engine/: __init__.py  protocol_engine.py
api/src/opentrons/protocol_runner/: legacy_wrappers.py  protocol_runner.py
app/: package.json
app-shell/: package.json
app-testing/: .pylintrc  Makefile  Pipfile  README.md  conftest.py  example.env
app-testing/src/: highlight.py  left_menu.py  more_menu.py  ot_robot.py  robot_page.py  robots_list.py
app-testing/src/driver/: highlight.py
app-testing/src/menus/: left_menu.py  robots_list.py
app-testing/src/pages/: robot_page.py
app-testing/src/resources/: ot_application.py  system_file_dialog.py
app-testing/tests/: calibrated_test.py  initial_app_test.py
app/src/organisms/ProtocolSetup/: index.tsx
components/: package.json
discovery-client/: package.json
labware-library/: package.json
notify-server/: Config.in  Makefile  pyproject.toml
protocol-designer/: package.json
protocol-library-kludge/: package.json
react-api-client/src/protocols/: index.ts  useNewProtocolDetails.ts
robot-server/robot_server/: hardware.py
robot-server/tests/integration/: test_settings.tavern.yaml
shared-data/: package.json
step-generation/: package.json
update-server/: Pipfile
(+9 files in other folders)
